<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/etFilterDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filter_date_hint"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etFilterLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/filter_location_hint"
        android:inputType="textCapWords"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etFilterCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/filter_category_hint"
        android:inputType="textCapWords"
        android:maxLines="1" />

</LinearLayout>
